# GliderRust

./: Cargo.toml  README.md
.claude/: settings.local.json
docs/: legacy-gui-removal-plan.md
frontend/: app.js  index.html  legacy-controls.js  legacy-controls.json  styles.css
src/: backend_api.rs  config.rs  lib.rs  main.rs  offsets.rs  service.rs
src/bot/: mod.rs  state.rs
src/input/: mod.rs
src/memory/: mod.rs  reader.rs  types.rs
src/net/: mod.rs
src/profile/: mod.rs  parser.rs  types.rs
src/ui/: mod.rs  theme.rs
src/ui/panels/: debug.rs  diagnostics.rs  home.rs  mod.rs  profiles.rs  settings.rs  status.rs
tests/: profile_compat.rs
