[package]
name = "glider_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.34"
egui = "0.34"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading"
] }
quick-xml = { version = "0.35", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2"
rfd = "0.14"
wry = "0.55"
tao = "0.35"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
